src/schema/snapshots/schermz__schema__tests__schema_from_array_unmerged.snap
---
source: src/schema/tests.rs
assertion_line: 312
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "address": {
    "types": [
      "NULL",
      {
        "city": {
          "types": [
            "STRING(6)"
          ],
          "values": [
            "London"
          ]
        },
        "country_code": {
          "types": [
            "STRING(2)"
          ],
          "values": [
            "UK"
          ]
        },
        "street": {
          "types": [
            "STRING(17)"
          ],
          "values": [
            "10 Downing Street"
          ]
        },
        "zip": {
          "types": [
            "STRING(5)"
          ],
          "values": [
            "12345"
          ]
        }
      },
      {
        "city": {
          "types": [
            "STRING(8)"
          ],
          "values": [
            "Caldwell"
          ]
        },
        "country": {
          "types": [
            "STRING(3)"
          ],
          "values": [
            "USA"
          ]
        },
        "country_code": {
          "types": [
            "STRING(2)"
          ],
          "values": [
            "US"
          ]
        },
        "state": {
          "types": [
            "STRING(10)"
          ],
          "values": [
            "New Jersey"
          ]
        },
        "street": {
          "types": [
            "STRING(14)"
          ],
          "values": [
            "14 Aspen Drive"
          ]
        },
        "zip": {
          "types": [
            "STRING(8)"
          ],
          "values": [
            "NJ 07006"
          ]
        }
      },
      {
        "city": {
          "types": [
            "STRING(7)"
          ],
          "values": [
            "Potsdam"
          ]
        },
        "country": {
          "types": [
            "STRING(7)"
          ],
          "values": [
            "Germany"
          ]
        },
        "state": {
          "types": [
            "STRING(11)"
          ],
          "values": [
            "Brandenburg"
          ]
        },
        "street": {
          "types": [
            "STRING(9)"
          ],
          "values": [
            "Gr. Weg 3"
          ]
        },
        "zip": {
          "types": [
            "STRING(5)"
          ],
          "values": [
            "14467"
          ]
        }
      }
    ]
  },
  "age": {
    "types": [
      "NUMBER",
      "STRING(2)"
    ]
  },
  "name": {
    "types": [
      "STRING(8, 15)"
    ],
    "values": [
      "Angela Merkel",
      "Jane Doe",
      "Sherlock Holmes",
      "Tony Soprano"
    ]
  },
  "personal_data": {
    "types": [
      {
        "gender": {
          "types": [
            "STRING(4, 6)"
          ],
          "values": [
            "female",
            "male"
          ]
        },
        "marital_status": {
          "types": [
            "STRING(6, 7)"
          ],
          "values": [
            "married",
            "single"
          ]
        }
      },
      {
        "gender": {
          "types": [
            "STRING(6)"
          ],
          "values": [
            "female"
          ]
        }
      }
    ]
  },
  "phones": {
    "types": [
      "NULL",
      {
        "ARRAY": [
          {
            "mobile": {
              "types": [
                "STRING(10, 11)"
              ],
              "values": [
                "+1 3456789",
                "+44 3456789"
              ]
            }
          },
          {
            "fax": {
              "types": [
                "STRING(13)"
              ],
              "values": [
                "+49 343156780"
              ]
            },
            "mobile": {
              "types": [
                "STRING(13)"
              ],
              "values": [
                "+49 343156789"
              ]
            }
          },
          "NUMBER",
          "STRING(10, 17)"
        ]
      }
    ]
  },
  "title": {
    "types": [
      "STRING(0, 3)"
    ],
    "values": [
      "",
      "Dr."
    ]
  }
}
