src/schema/snapshots/schermz__schema__tests__schema_from_object.snap
---
source: src/schema/tests.rs
assertion_line: 134
expression: "Schema::from_json(&json, true, 30).to_json()"
---
{
  "address": {
    "types": [
      {
        "city": {
          "types": [
            "STRING(6)"
          ],
          "values": [
            "London"
          ]
        },
        "street": {
          "types": [
            "STRING(17)"
          ],
          "values": [
            "10 Downing Street"
          ]
        }
      }
    ]
  },
  "age": {
    "types": [
      "NUMBER"
    ],
    "values": [
      43
    ]
  },
  "name": {
    "types": [
      "STRING(8)"
    ],
    "values": [
      "John Doe"
    ]
  },
  "phones": {
    "types": [
      {
        "ARRAY": [
          {
            "mobile": {
              "types": [
                "STRING(11)"
              ],
              "values": [
                "+44 3456789"
              ]
            }
          },
          "NUMBER",
          "STRING(11)"
        ]
      }
    ]
  },
  "title": {
    "types": [
      "STRING(0)"
    ],
    "values": [
      ""
    ]
  }
}
