src/schema/snapshots/schermz__schema__tests__single_object_input_never_marks_optional.snap
---
source: src/schema/tests.rs
assertion_line: 332
expression: "Schema::from_json(&json, false).to_json()"
---
{
  "a": {
    "types": [
      "NUMBER"
    ]
  },
  "b": {
    "types": [
      "NUMBER"
    ]
  }
}
