src/schema/snapshots/schermz__schema__tests__string_enum_over_threshold_skipped.snap
---
source: src/schema/tests.rs
assertion_line: 414
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "k": {
    "types": [
      "STRING(2, 3)"
    ]
  }
}
