src/schema/snapshots/schermz__schema__tests__string_enum_two_distinct_values_emitted_sorted.snap
---
source: src/schema/tests.rs
assertion_line: 403
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "status": {
    "types": [
      "STRING(6, 8)"
    ],
    "values": [
      "in_force",
      "opened"
    ]
  }
}
