src/schema/snapshots/schermz__schema__tests__string_with_null_still_emits_values.snap
---
source: src/schema/tests.rs
assertion_line: 500
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "tag": {
    "types": [
      "NULL",
      "STRING(1)"
    ],
    "values": [
      "a",
      "b"
    ]
  }
}
