src/schema/snapshots/schermz__schema__tests__threshold_zero_disables_values_entirely.snap
---
source: src/schema/tests.rs
assertion_line: 431
expression: "Schema::from_json(&json, false, 0).to_json()"
---
{
  "k": {
    "types": [
      "STRING(1)"
    ]
  }
}
