src/schema/snapshots/schermz__schema__tests__type_variation_alone_is_not_optionality.snap
---
source: src/schema/tests.rs
assertion_line: 391
expression: "Schema::from_json(&json, false).to_json()"
---
{
  "id": {
    "types": [
      "NUMBER",
      "STRING(3)"
    ]
  }
}
