src/schema/snapshots/schermz__schema__tests__unmerged_variants_have_no_optional_within.snap
---
source: src/schema/tests.rs
assertion_line: 355
expression: "Schema::from_json(&json, false).to_json()"
---
{
  "addr": {
    "types": [
      {
        "x": {
          "types": [
            "NUMBER"
          ]
        },
        "y": {
          "types": [
            "NUMBER"
          ]
        }
      },
      {
        "x": {
          "types": [
            "NUMBER"
          ]
        }
      }
    ]
  }
}
